# cppcharting

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: bar.cpp.E4920C738D64DF8B.idx  bar.hpp.982555813DD603A5.idx  concepts.hpp.0A8DC68A92B140BE.idx  graph.cpp.90EC3347F5C27017.idx  graph.hpp.16601A52DA13BEDE.idx  main.cpp.267987929C281D25.idx
examples/: area_example.cpp  bar3d_example.cpp  bar_example.cpp  box_example.cpp  drawing_time.cpp  facetgrid_example.cpp  function_example.cpp  hist_example.cpp  line3d_example.cpp  line_example.cpp  main.cpp  pie3d_example.cpp  pie_example.cpp  scatter3d_example.cpp  scatter_example.cpp
include/chartastic/: chartastic.hpp
include/chartastic/2d/: area.hpp  bar.hpp  box.hpp  facetgrid.hpp  function.hpp  hist.hpp  line.hpp  pie.hpp  plot.hpp  scatter.hpp
include/chartastic/3d/: bar.hpp  line.hpp  pie.hpp  scatter.hpp
include/chartastic/core/: colors.hpp  concepts.hpp  error.hpp
include/graphlib/2d/: area.hpp  bar.hpp  box.hpp  hist.hpp  line.hpp  pie.hpp  plot.hpp  scatter.hpp
include/graphlib/core/: concepts.hpp  graph.hpp
src/2d/: area.cpp  bar.cpp  box.cpp  facetgrid.cpp  function.cpp  hist.cpp  line.cpp  pie.cpp  scatter.cpp
src/3d/: bar.cpp  line.cpp  pie.cpp  scatter.cpp
src/core/: graph.cpp
